# Escalada

./: CURS_INTRO_APLICATIE.md  Checklist de implementare (end-to-end).md  Escalada CORE Stabilization.md  IMBUNATATIRI_ESCALADA.md  PROJECT_STATUS_SUMMARY.md  Prezentare_Proiect_Escalada.md  UPGRADE_PLAN_2025.md  VERIFICATION_REPORT.md
Escalada/: .env.example  BUGFIX_SUMMARY.md  README.md  TEST_COVERAGE_SUMMARY.md  alembic.ini  package-lock.json  package.json  pyproject.toml
Escalada/backups/: backup_20251230T082149Z.json  backup_20251230T083843Z.json  backup_20251230T093243Z.json  backup_20251230T124948Z.json  backup_20251230T131604Z.json  backup_20251231T053742Z.json
Escalada/escalada/: Under_11B_Finala.xlsx  Under_11F_Finala.xlsx  Under_13B_Finala.xlsx  Under_13F_Finala.xlsx  Under_15B_Finala.xlsx  Under_15F_Finala.xlsx  auth.py  main.py  rate_limit.py  validation.py
Escalada/escalada-ui/: README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vitest.config.ts
Escalada/escalada-ui/coverage/: index.html
Escalada/escalada-ui/playwright-report/: index.html
Escalada/escalada-ui/src/: App.jsx  index.css  main.jsx  main.tsx
Escalada/escalada/Calificari/: Under_11B.xlsx  Under_11F.xlsx  Under_13B.xlsx  Under_13F.xlsx  Under_15B.xlsx  Under_15F.xlsx
Escalada/escalada/api/: auth.py  live.py  podium.py  save_ranking.py
Escalada/escalada/auth/: deps.py
Escalada/migrations/: env.py
Escalada/tests/: test_auth.py  test_db_integration.py  test_live.py  test_simulation_six_boxes.py  test_ws_judge_flow.py
(+62 files in other folders)
