[project]
name = "escalada"
version = "0.1.0"
description = "Control panel și backend pentru concurs escaladă"
authors = [
    {name = "Silviu"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "reportlab (>=4.4.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "websockets (>=15.0.1,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
